hsreplaynet/static/styles/home_new.scss
/* ... */
#banner-ranks {
	position: absolute;
	display: flex;
	right: 0;
	flex-wrap: nowrap;

	img {
		height: 130px;
		width: 130px;

		&:nth-last-of-type(2) {
			opacity: 0.8;
		}
		&:nth-last-of-type(3) {
			opacity: 0.7;
		}
		&:nth-last-of-type(4) {
			opacity: 0.6;
		}
		&:nth-last-of-type(5) {
			opacity: 0.5;
		}
		&:nth-last-of-type(6) {
			opacity: 0.4;
		}
		&:nth-last-of-type(7) {
			opacity: 0.3;
		}
		&:nth-last-of-type(8) {
			opacity: 0.2;
		}
		&:nth-last-of-type(9) {
			opacity: 0.1;
		}

		@media (max-width: 800px) {
			&:nth-last-of-type(4) {
				opacity: 0.5;
			}
			&:nth-last-of-type(5) {
				opacity: 0.3;
			}
			&:nth-last-of-type(6) {
				opacity: 0.1;
			}
		}

		@media (max-width: 550px) {
			&:nth-last-of-type(2) {
				opacity: 0.6;
			}
			&:nth-last-of-type(3) {
				opacity: 0.4;
			}
			&:nth-last-of-type(4) {
				opacity: 0.2;
			}
			&:nth-last-of-type(5) {
				opacity: 0.1;
			}
		}
	}
}

#banner-icon {
	position: absolute;
	height: 160px;
}

.features {
	max-width: 1540px;
	padding-bottom: 20px;

	&:first-of-type {
		padding-top: 15px;
	}

	.feature {
		height: 500px;
		margin: 10px auto;
		max-width: 500px;
		padding: 5px;
		position: relative;

		> * {
			box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
				0 3px 6px rgba(0, 0, 0, 0.23);
		}

		.feature-title {
			background: $blue;
			padding: 0 7px;
			position: absolute;
			width: calc(100% - 8px);
			left: 4px;
			color: white;
			font-weight: bold;
			font-size: 1.3em;
			border-radius: 1px;
			line-height: 48px;
			display: flex;
			font-variant: small-caps;

			> span {
				flex: 1 1 0;
				text-overflow: ellipsis;
				overflow: hidden;
				white-space: nowrap;
			}

			.feature-btn {
				border: 1px solid rgba(0, 0, 0, 0.1);
				background: rgba(255, 255, 255, 0.3);
				color: white;
				margin: 7px 0;

				&.active {
					background: rgba(255, 255, 255, 0.4);
					text-decoration: underline;
					font-weight: bold;
				}

				&:hover {
					background: rgba(255, 255, 255, 0.5);

					&.active {
						background: rgba(255, 255, 255, 0.4);
					}
				}
			}
		}

		.feature-content {
			border: 1px solid $blue;
			border-radius: 3px;
			height: 100%;
			padding-top: calc(1.2em + 28px);
			background: $spacegray;
			overflow: hidden;

			&.no-title {
				padding-top: 0;
			}

			.promo-button {
				border: 1px solid rgba(255, 255, 255, 0.2);
			}

			.message-wrapper {
				color: white;
				opacity: 0.9;
			}
		}

		.feature-banner {
			background: rgba(29, 54, 87, 0.9);
			color: white;
			margin-top: 120px;
			padding: 10px 15px 15px 15px;

			> h1 {
				font-weight: bold;
				font-size: 2.2em;
				font-variant: small-caps;
				margin: 0;
			}

			> h2 {
				font-size: 1.3em;
				margin: 0;
			}
		}

		#premium-feature {
			background-image: url("/static/images/premium-background.jpg");
			background-position-x: center;
			background-position-y: 30%;
			background-repeat: no-repeat;
			background-size: cover;
			border-color: $premium;
			position: relative;

			.header-wrapper {
				align-items: center;
				display: flex;
				height: 50%;
				justify-content: center;
				background: rgba(35, 39, 42, 0.2);
			}

			h1 {
				color: $premium;
				font-size: 3em;
				font-style: italic;
				font-variant: small-caps;
				font-weight: bold;
				margin: 0;
				text-align: center;
				text-shadow: -1px -1px 0 rgba(0, 0, 0, 1),
					-1px 1px 0 rgba(0, 0, 0, 1), 1px 1px 0 rgba(0, 0, 0, 1),
					1px -1px 0 rgba(0, 0, 0, 1);
			}

			.premium-banner {
				background: rgba(35, 39, 42, 0.8);
				color: white;
				display: flex;
				height: 50%;
				position: absolute;
				top: 50%;
				width: 100%;

				> ul {
					margin: auto 0 auto 10px;
				}

				li {
					font-weight: bold;
					font-size: 1.1em;
				}

				.btn-wrapper {
					margin: auto;
					margin-left: 5px;
					flex: 1 1 0;
				}

				.btn {
					font-size: 1em;
					margin: 0 10px;
					padding: 4px 8px;
					width: calc(100% - 20px);

					&:nth-of-type(2) {
						margin-top: 10px;
					}
				}
			}
		}
	}

	.feature-small {
		height: 230px;

		.feature-content {
			background-position-x: center;
			background-position-y: center;
			border: 1px solid $blue;
			display: block;
			text-decoration: none;
		}

		a.feature-content:hover {
			background-color: rgb(20, 20, 20);
			background-blend-mode: screen;
		}
	}

	.premium-feature {
		.feature-title {
			background: $premium;
			color: black;

			.feature-btn {
				color: black;
			}
		}

		.feature-content {
			border-color: $premium;
		}
	}

	.fade {
		height: 20px;
		position: absolute;
		width: 100%;
		opacity: 1;

		&.fade-top {
			top: 0;
			background: linear-gradient(
				to bottom,
				$spacegray 0%,
				transparent 100%
			);
		}

		&.fade-bottom {
			bottom: 0;
			background: linear-gradient(
				to top,
				$spacegray 0%,
				transparent 100%
			);
		}
	}
}
/* ... */

